Modified Ashu's fix to bug 70656 so that it doesn't leak memory, and Initialize is called in both cases, whether or not the multiple profile code is executed.